--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@netlify/functions": "^2.7.0",
     "@twa-dev/sdk": "^7.0.0",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.2",
     "preact": "^10.20.0",
     "preact-iso": "^2.6.3",
